package(default_visibility = ["//visibility:private"])

cc_test(
    name = "whisper_engine_test",
    srcs = ["whisper_engine_test.cc"],
    size = "small",
    deps = [
        "//engine_cpp/src/inference:whisper_engine",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "opus_decoder_test",
    srcs = ["opus_decoder_test.cc"],
    size = "small",
    deps = [
        "//engine_cpp/src/audio:opus_decoder",
        "//engine_cpp/third_party/libopus:libopus",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "embedder_test",
    srcs = ["embedder_test.cc"],
    size = "small",
    deps = [
        "//engine_cpp/src/inference:embedder",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/types:span",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "model_budget_test",
    srcs = ["model_budget_test.cc"],
    size = "small",
    deps = [
        "//engine_cpp/src/session:model_budget",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "chunker_test",
    srcs = ["chunker_test.cc"],
    size = "small",
    data = ["//docs/rag:taiwan.md"],
    deps = [
        "//engine_cpp/src/rag:chunker",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "qdrant_client_test",
    srcs = ["qdrant_client_test.cc"],
    size = "small",
    deps = [
        "//engine_cpp/src/vectordb:qdrant_client",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "retriever_test",
    srcs = ["retriever_test.cc"],
    size = "small",
    deps = [
        "//engine_cpp/src/inference:embedder",
        "//engine_cpp/src/rag:retriever",
        "//engine_cpp/src/vectordb:qdrant_client",
        "//proto/aegis/v1:aegis_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/types:span",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "engine_seed_util_test",
    srcs = ["engine_seed_util_test.cc"],
    size = "small",
    deps = [
        "//engine_cpp/cmd/engine:seed_lib",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "manifest_loader_test",
    srcs = ["manifest_loader_test.cc"],
    size = "small",
    deps = [
        "//engine_cpp/src/models:manifest_loader",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

# ADR-0005 R7 — release binaries MUST NOT ship the AEGIS_DEV_AUDIO_DUMP
# debug banner. Default `bazel test` builds engine in fastbuild → no
# define → string absent → pass. Fails if a -DAEGIS_DEV_AUDIO_DUMP
# copt leaks outside the `build:debug` config in .bazelrc.
sh_test(
    name = "no_dev_audio_dump_symbol_test",
    srcs = ["no_dev_audio_dump_test.sh"],
    size = "small",
    args = ["$(rootpath //engine_cpp/cmd/engine:engine)"],
    data = ["//engine_cpp/cmd/engine:engine"],
)
