load("@rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "gateway",
    srcs = ["main.go"],
    # The Go module is //gateway_go/go.mod, named
    # "github.com/BinHsu/aegis-core/gateway_go" so import paths mirror
    # the on-disk layout in this polyglot monorepo.
    importpath = "github.com/BinHsu/aegis-core/gateway_go/cmd/gateway",
    visibility = ["//visibility:public"],
    deps = [
        # Bazel is authoritative for proto codegen per ADR-0013 — the
        # binary picks up the Bazel-produced Go bindings here, NOT the
        # checked-in gateway_go/gen/go/ files (those exist only for IDE
        # / go-tooling consumption).
        "//proto/aegis/v1:aegis_go_proto",
        "//gateway_go/internal/auth",
        "//gateway_go/internal/grpc",
        "//gateway_go/internal/pipeline",
        "//gateway_go/internal/session",
        "//gateway_go/internal/token",
        "//gateway_go/internal/webrtc",
        "//gateway_go/internal/ws",
        "@com_github_improbable_eng_grpc_web//go/grpcweb",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//keepalive",
    ],
)
