load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "auth",
    srcs = [
        "auth.go",
        "interceptor.go",
        "jwt.go",
        "noop.go",
    ],
    importpath = "github.com/BinHsu/aegis-core/gateway_go/internal/auth",
    visibility = ["//gateway_go:__subpackages__"],
    deps = [
        "@com_github_golang_jwt_jwt_v5//:jwt",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "auth_test",
    size = "small",
    srcs = ["auth_test.go"],
    embed = [":auth"],
    deps = [
        "@com_github_golang_jwt_jwt_v5//:jwt",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
    ],
)
