load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cors",
    srcs = ["cors.go"],
    importpath = "github.com/BinHsu/aegis-core/gateway_go/internal/cors",
    visibility = ["//gateway_go:__subpackages__"],
)

go_test(
    name = "cors_test",
    srcs = ["cors_test.go"],
    embed = [":cors"],
)
