load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "logging",
    srcs = [
        "logger.go",
        "trace_handler.go",
    ],
    importpath = "github.com/BinHsu/aegis-core/gateway_go/internal/logging",
    visibility = ["//gateway_go:__subpackages__"],
    # Single non-stdlib dep: the OTel trace API surface (not the SDK).
    # TraceContextHandler reads trace.SpanFromContext to inject
    # trace_id / span_id; everything else is log/slog (Go 1.21+ core).
    deps = ["@io_opentelemetry_go_otel_trace//:trace"],
)

go_test(
    name = "logging_test",
    size = "small",
    srcs = [
        "logger_test.go",
        "trace_handler_test.go",
    ],
    embed = [":logging"],
    deps = [
        "@io_opentelemetry_go_otel_trace//:trace",
        "@io_opentelemetry_go_otel_sdk//trace",
    ],
)
